# crame

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: tests.yml
src/: cli.rs  error.rs  main.rs
src/app/: init.rs  mod.rs  new.rs
src/cli/: mod.rs
src/service/: build_system.rs  config.rs  init.rs  mod.rs  test_util.rs  vcs.rs
src/util/: error.rs  file.rs  mod.rs  test.rs
template/: justfile
template/tests/: run.c
template/tests/unit/: it_works.c
