[package]
name = "crame"
version = "0.1.0"
authors = ["Christopher Morton <sonro@gmx.com>"]
edition = "2021"
description = "crame is a build tool for c projects, with a small testing framework."
categories = ["command-line-utilities"]
keywords = [
    "build",
    "tool",
    "c",
    "framework",
    "test",
]
repository = "https://github.com/sonro/crame"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
exitcode = "1.1.2"
git2 = "0.15.0"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[dev-dependencies]
tempfile = "3.3.0"
